<?xml version="1.0" encoding="utf-8"?><!--
  This file is part of My Expenses.
  My Expenses is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  My Expenses is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with My Expenses.  If not, see <http://www.gnu.org/licenses/>.
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@id/DELETE_COMMAND"
        android:icon="@drawable/ic_menu_delete"
        android:orderInCategory="20"
        android:title="@string/menu_delete"
        app:showAsAction="never" />
    <item
        android:id="@id/MAP_TAG_COMMAND"
        android:icon="@drawable/ic_action_tag"
        android:orderInCategory="30"
        android:title="@string/menu_tag"
        app:showAsAction="never" />

   <item
        android:id="@id/SPLIT_TRANSACTION_COMMAND"
        android:icon="@drawable/ic_menu_split_transaction"
        android:orderInCategory="40"
        android:title="@string/menu_split_transaction"
        app:showAsAction="never" />
    <item
        android:id="@id/UNDELETE_COMMAND"
        android:icon="@drawable/ic_menu_undelete"
        android:orderInCategory="45"
        android:title="@string/menu_undelete_transaction"
        app:showAsAction="never" />

    <item
        android:id="@+id/REMAP_PARENT"
        android:orderInCategory="50"
        android:icon="@drawable/redo"
        android:title="@string/menu_remap"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@id/REMAP_CATEGORY_COMMAND"
                android:title="@string/category" />
            <item
                android:id="@id/REMAP_PAYEE_COMMAND"
                android:title="@string/payer_or_payee" />
            <item
                android:id="@id/REMAP_METHOD_COMMAND"
                android:title="@string/method" />
            <item
                android:id="@id/REMAP_ACCOUNT_COMMAND"
                android:title="@string/account" />
            <item
                android:id="@id/REMAP_DATE_COMMAND"
                android:title="@string/date" />
        </menu>
    </item>
    <item
        android:id="@id/LINK_TRANSFER_COMMAND"
        android:icon="@drawable/ic_link"
        android:orderInCategory="5"
        android:title="@string/menu_create_transfer"
        app:showAsAction="never" />
    <item
        android:id="@+id/SELECT_ALL_COMMAND"
        android:icon="@drawable/ic_select_all"
        android:orderInCategory="100"
        android:title="@android:string/selectAll"
        app:showAsAction="never" />
</menu>
