...
    <string name="menu_back">Back</string>
    <string name="menu_backup">Backup</string>
    <!-- Balance: compare cleared balance in app with balance on statement received from bank -->
    <string name="menu_balance">Balance account</string>
    <!-- Cancelling a plan instance means setting a flag so that this instance will not trigger the creation of a new transaction -->
    <string name="menu_cancel_plan_instance">Cancel</string>
    <string name="menu_clone_transaction">Clone</string>
    <string name="menu_contrib">Contribute</string>
    <string name="menu_create_account">New account</string>
    <string name="menu_create_instance_edit">Apply and edit</string>
    <string name="menu_create_instance_save">Apply and save</string>
    <string name="menu_create_main_cat">New main category</string>
    <string name="menu_create_method">New payment method</string>
...
    <string name="remapping_result">The selected transactions were remapped.</string>
    <string name="clone_and_remap_result">The selected transactions were cloned and remapped.</string>
    <!-- If user wants to remap multiple transactions to a new account or payment method, there might be no applicable item, e.g. because a transfer cannot me mapped to its transfer account, or
        because no payment method is configured for all of the given account types.-->
    <string name="remap_empty_list">No item was found, that can be mapped to all of the selected transactions.</string>
    <!-- The label for the button, where user confirms that they want to clone the selected transactions and then remap them. -->
    <string name="button_label_clone_and_remap">Clone and remap</string>
    <!-- The summary of a preference toggle. If switched on cloned transactions have the date set to the current date -->
    <string name="pref_clone_with_current_date_summary_on">Cloned transactions have current date</string>
    <!-- The summary of a preference toggle. If switched off cloned transactions keep the original date -->
    <string name="pref_clone_with_current_date_summary_off">Cloned transactions keep original date</string>
    <string name="tags_create_or_select">Create or select tags</string>
    <string name="pref_manage_tags_summary">Add, edit, delete tags.</string>
...
    <string name="menu_unlink_transfer">Unlink transfer</string>
    <string name="warning_unlink_transfer">The selected transfer will be unlinked: It will be replaced by normal transactions in both accounts.</string>
    <!-- This is the label for the action that creates a transfer from a normal transaction. -->
    <string name="menu_transform_to_transfer">Convert into transfer</string>
    <string name="warning_transform_to_transfer">The selected transaction will be replaced by a transfer from %1$s to %2$s.</string>
    <string name="remap_date">On all selected transactions, date will be set to %s.</string>
    <string name="remap_update_value_date">Also update value date</string>
    <!-- %d will be replaced with year -->
    <string name="roadmap_intro">The %d Roadmap Vote is now open! Vote for the features and improvements that matter most to you.</string>
    <string name="merge_categories_dialog_title">Merge Categories</string>
    <string name="subcategories_merged_recursively">If any of the merged categories have subcategories with the same label, those will be merged first, recursively.</string>
    <string name="merge_categories_prompt">Select the category that you want to keep</string>
    <string name="pref_csv_export_category_separator_summary">Separator between levels of category hierarchy</string>
...
